# Simplex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests.yml
scripts/: config.bat  config.sh  run.bat  run.sh  run_tests.bat  run_tests.sh
src/: main.py
src/simplex/: __init__.py  models.py  parser.py  solver.py  standard_form.py
src/utils/: __init__.py  matrixUtils.py
tests/: conftest.py  test_main.py
tests/unit/: test_input_modeling.py  test_matrix_utils.py  test_solver.py  test_standard_form.py
